# OpenCapyBox

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  README_cn.md  SECURITY.md  init_db.py  models.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cicd/: Dockerfile  entrypoint.sh  nginx.conf
deploy/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
deploy/scripts/: dev_run.sh  restart.sh
deploy/test_scripts/: run_tests.py
docs/Capy-project-md/: api.md  architecture.md  frontend.md  sandbox.md
docs/Capy-project-md/ag-ui-md/: AG-UI_事件文档_v2.md  AG-UI_官方教程_v2.md  AG-UI_示例说明_v2.md  AG-UI_类型文档_v2.md
docs/sandbox_template/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  MEMORY.md  SOUL.md  USER.md
frontend/: DESIGN_SYSTEM.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: setup.ts
frontend/src/components/: AgentConfig.tsx  ArtifactsPanel.tsx  ChatInput.tsx  ChatV2.tsx  CodeBlock.tsx  CronHistory.tsx  FileAttachment.tsx  FilePreview.tsx  Login.tsx  ModelSelector.tsx  QuestionCard.tsx  ReasoningPanel.tsx  Round.tsx  SessionList.tsx  SkillManager.tsx
frontend/src/services/: api.ts  configApi.ts
frontend/src/types/: index.ts
frontend/src/utils/: displayBlocks.ts  fileUtils.ts  imageUtils.ts  messageParser.ts  modelUtils.tsx
src/: __init__.py
src/agent/: __init__.py  agent.py  event_emitter.py  logger.py
src/agent/config/: mcp.json.example
src/agent/llm/: anthropic_client.py  base.py  json_parser.py  llm_wrapper.py  openai_client.py
src/api/: __init__.py  config.py  deps.py  main.py  model_registry.py
tests/: __init__.py  conftest.py  helpers.py  test_agent.py  test_agent_cancel.py  test_agent_extended.py  test_agent_service_extended.py  test_anthropic_client.py  test_api_routes.py  test_ask_user_tool.py  test_auth_deps.py  test_bocha_search.py  test_bootstrap_and_merge.py  test_chat_subscribe.py  test_context_assembly.py  test_cron_service.py  test_cron_tool.py  test_database.py  test_history_service.py  test_json_parser.py  test_llm.py  test_llm_wrapper.py  test_memory_tools.py  test_model_registry.py  test_openai_client.py  test_retry.py  test_sandbox_service.py  test_sandbox_tools.py  test_schema.py  test_security.py  test_services.py  test_skill_loader.py  test_skill_tool.py  test_startup_cleanup.py  test_terminal_utils.py  test_timezone.py  test_tools_base.py  test_user_sandbox.py  verify_setup.py
(+90 files in other folders)
